hmi website updated

--- a/hapimpacts.html
+++ b/hapimpacts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Impacts-Her Matter Initiative(HMI)</title>
+	<title>Hap Impacts - HMI</title>
 	<meta name="description" content="HMI is a Non-Profit Organization that focuses on promoting Equal opportunities, access to education and healthcare, Leadership advancement and self-reliance for women and girls in Nigeria.">
   	<meta name="keywords" content="Women and Girls NGO in Niger State, Youth Organization in Niger State, Girls education in Niger State, Women and girls empowerment in Niger State, Women and Girls NGO in Nigeria, Youth Organization in Nigeria, Girls education in Nigeria, Women and girls empowerment in Nigeria">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,19 +9,19 @@
 </head>
 <body>
 	<header>
-		<img src="images/pnglogo2.png">
+		<a href="images/hmilogopng.png"><img id="image" src="images/hmilogopng.png"></a>
 		<h1>Welcome to HMI</h1>
-	</header> 
-		<nav id="hminav">
+	</header>  
+	<nav id="hminav">
 			<ul>
-				<li><a href="#">About
+				<li><a href="index.html">About
 					<span class="arrow">&#x25BC;</span>
 				</a>
 					<ul class="submenu">
-						<li><a href="index.html/#whowe">Who We Are</a></li>
-						<li><a href="#vision">Vision</a></li>
-						<li><a href="#mission">Mission</a></li>
-						<li><a href="#core">Core Values</a></li>
+						<li><a href="index.html#whowe">Who We Are</a></li>
+						<li><a href="index.html#vision">Vision</a></li>
+						<li><a href="index.html#mission">Mission</a></li>
+						<li><a href="index.html#core">Core Values</a></li>
 					</ul>
 				</li>
 				<li><a href="#">What We do
@@ -29,10 +29,10 @@
 				</a>
 					<ul class="submenu">
 						<li><a href="girlseducation.html">Girls Education</a></li>
-						<li><a href="#">Health</a></li>
-						<li><a href="#">Economic Empowerment</a></li>
-						<li><a href="#">Leadership</a></li>
-						<li><a href="#">Democracy</a></li>
+						<li><a href="health.html">Health</a></li>
+						<li><a href="economic.html">Economic Empowerment</a></li>
+						<li><a href="fyn.html">Youth Development</a></li>
+						<li><a href="#">Democracy and Good Governance</a></li>
 						<li><a href="#">Peace</a></li>
 					</ul>
 				</li>
@@ -42,31 +42,76 @@
 				</a>
 					<ul class="submenu">
 						<li><a href="projectprog.html">PROG(Promotion of Girl Child Education</a></li>
-						<li><a href="#">CODE-ME</a></li>
-						<li><a href="#">HAP(Health Awareness Program)</a></li>
-						<li><a href="#">FLIP(Functional Literacy Program for Young Women)</a></li>
+						<li><a href="codeme.html">CODE-ME</a></li>
+						<li><a href="projecthap.html">HAP(Health Awareness Program)</a></li>
+						<li><a href="projectvow.html">VOW(Vocational Skills for Rural Women)</a></li>
+						<li><a href="#">Vote Make Nigeria Better</a></li>
+						<li><a href="projectflip.html">FLIP(Functional Literacy Program for Women)</a></li>
 					</ul>
 				</li>
-				<li><a href="#">Impacts</a></li>
+				<li><a href="#">Impacts
+					<span class="arrow">&#x25BC;</span>
+				</a>
+				<ul class="submenu">
+					<li><a href="progimpact.html">PROG Impacts</a></li>
+					<li><a href="hapimpacts.html">HAP Impacts</a></li>
+					<li><a href="#">FLIP Impacts</a></li>
+					<li><a href="#">VOW Impacts</li>
+					<li><a href="#">Vote Make Nigeria Better</a></li>
+				</ul>
+				</li>
 				<li><a href="#">Take Action
 					<span class="arrow">&#x25BC;</span>
 				</a>
 					<ul class="submenu">
+						<li><a href="#">Donate</a></li>
 						<li><a href="#">Partner</a></li>
 						<li><a href="#">Sponsor</a></li>
 						<li><a href="#">Volunteer</a></li>
 					</ul>
 				</li>
-				<li><a href="#">Donate</a></li>
+				<li><a href="#">Gallery</a></li>
 				<li><a href="#">News</a></li>
 				<li><a href="#">Blog</a></li>
 			</ul>
 		</nav>
-	<div class="hap">
-		<img src="images/hapimpacts.jpg" alt="hap">;
-		<img src="images/prog.jpg" alt="prog">;
 
-    </div>
+		<div class="contentwrap">
+			<div class="hhapim">
+				<img src="images/impacts.png">
+				<h1>Impacts of Project HAP<br>(Health Awareness Program)</h1>
+			</div>
+				
+			<div class="hapim">
+				<div class="one">
+						<p>Project HAP(Health Awareness Program) had successfully achieved its objectives. It was a session of meaningful value addition as beneficiaries which included adolescent girls, pregnant women, lactating mothers and young women of age reproductive  were made aware of the local health issues affecting their communities and their doubts were cleared on specific questions.
+							This is evident in the feedback received from the beneficiaries on the effectiveness of the programs.</p><br> 
+						<h2>Maman Imam from Randan Ruwa Community</h2>
+							<p>She couldn't hold her joy when she said, “I have never witnessed a thing like this before, 
+								the programs held in our village was like a messiah, the screening conducted, the health talks and the free distribution of
+								mosquito net, sanitary pad and detergents really impacted our lives a lot.</p>
+								<p>The only place we see doctors and nurses is in the hospital when we manage to go, but HMI brought doctors and nurses to our doorsteps. We now know how to stay healthy, 
+								take care of our families and maintain an hygiene environment. Thank you HMI”.</p><br>   
+				</div>
+				<div class="two"></div>
+				<div class="one">
+						<h2>Shafa from Angwanbiri Community</h2>
+						<p>She had this to say, “Before now I do not know how to manage menstruation neither did I know anything about menstrual hygiene, I have been doing it all wrongly. 
+							But with help of Her Matter Initiative (HMI), my dignity is restored”. </p><br>
+					<h2>Kudu, Gbaiko Community</h2>
+	
+					<p>A mother and a beneficiary in the local village of Gbaiko, said, “the health education talk held in our village about maternal health, nutrition and so non was an eye opener and truly enlightening. It gave me a good insight on how to take care of my family, 
+						deal with common ailment for my child and to maintain good hygiene. I am happy and my child is happy”.</p><br>
+					 
+				</div>
+				<div class="four"></div>
+				<div class="one">
+						<p>These were unchartered territories. We have successfully been able to implement project HAP (Health Awareness Program) and impacted the lives of over 300 families across various  villages .
+							 The villagers were gratefully for our efforts in enlightening them on their local health issues.</p> 
+				</div>
+				<div class="six"></div>
+			</div>
+			
 	<footer>
 		<div class="footercontainer">
 			<div class="littleabout">
