--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 </head>
 <body>
 	<header>
-		<img src="images/pnglogo2.png">
+		<a href="images/hmilogopng.png"><img src="images/hmilogopng.png"></a>
 		<h1>Welcome to HMI</h1>
 	</header> 
-		<nav id="hminav">
+	<nav id="hminav">
 			<ul>
 				<li><a href="index.html">About
 					<span class="arrow">&#x25BC;</span>
 				</a>
 					<ul class="submenu">
-						<li><a href="#whowe">Who We Are</a></li>
-						<li><a href="#vision">Vision</a></li>
-						<li><a href="#mission">Mission</a></li>
-						<li><a href="#core">Core Values</a></li>
+						<li><a href="index.html#whowe">Who We Are</a></li>
+						<li><a href="index.html#vision">Vision</a></li>
+						<li><a href="index.html#mission">Mission</a></li>
+						<li><a href="index.html#core">Core Values</a></li>
 					</ul>
 				</li>
 				<li><a href="#">What We do
@@ -31,9 +31,9 @@
 					<ul class="submenu">
 						<li><a href="girlseducation.html">Girls Education</a></li>
 						<li><a href="health.html">Health</a></li>
-						<li><a href="#">Economic Empowerment</a></li>
-						<li><a href="#">Leadership</a></li>
-						<li><a href="#">Democracy</a></li>
+						<li><a href="economic.html">Economic Empowerment</a></li>
+						<li><a href="fyn.html">Youth Development</a></li>
+						<li><a href="#">Democracy and Good Governance</a></li>
 						<li><a href="#">Peace</a></li>
 					</ul>
 				</li>
@@ -42,23 +42,36 @@
 					<span class="arrow">&#x25BC;</span>
 				</a>
 					<ul class="submenu">
-						<li><a href="#">PROG(Promotion of Girl Child Education</a></li>
+						<li><a href="projectprog.html">PROG(Promotion of Girl Child Education</a></li>
 						<li><a href="codeme.html">CODE-ME</a></li>
 						<li><a href="projecthap.html">HAP(Health Awareness Program)</a></li>
-						<li><a href="#">FLIP(Functional Literacy Program for Young Women)</a></li>
+						<li><a href="projectvow.html">VOW(Vocational Skills for Rural Women)</a></li>
+						<li><a href="#">Vote Make Nigeria Better</a></li>
+						<li><a href="projectflip.html">FLIP(Functional Literacy Program for Women)</a></li>
 					</ul>
 				</li>
-				<li><a href="hapimpacts.html">Impacts</a></li>
+				<li><a href="#">Impacts
+					<span class="arrow">&#x25BC;</span>
+				</a>
+				<ul class="submenu">
+					<li><a href="progimpact.html">PROG Impacts</a></li>
+					<li><a href="hapimpacts.html">HAP Impacts</a></li>
+					<li><a href="#">FLIP Impacts</a></li>
+					<li><a href="#">VOW Impacts</li>
+					<li><a href="#">Vote Make Nigeria Better</a></li>
+				</ul>
+				</li>
 				<li><a href="#">Take Action
 					<span class="arrow">&#x25BC;</span>
 				</a>
 					<ul class="submenu">
+						<li><a href="#">Donate</a></li>
 						<li><a href="#">Partner</a></li>
 						<li><a href="#">Sponsor</a></li>
 						<li><a href="#">Volunteer</a></li>
 					</ul>
 				</li>
-				<li><a href="donate.html">Donate</a></li>
+				<li><a href="#">Gallery</a></li>
 				<li><a href="#">News</a></li>
 				<li><a href="#">Blog</a></li>
 			</ul>
@@ -69,7 +82,8 @@
 			<p>HMI is investing qualitative resources into ensuring that Nigerian women and<br>girls are empowered towards the actualization of the gender angle the UN<br> Sustainable Development Goals (SDGs)</p>
 		</div>
 		<div class="methonav">
-			<h id="learn">Learn about our methodologies:</h>
+			<h id="learn">Learn about our methodo
+				logies:</h>
 			<a href="#">Capacity Building</a>
 			<a href="#">Research and Surveys</a>
 			<a href="#">Workshops and Trainings</a>
@@ -84,14 +98,13 @@
 
 	<div class="about">
 		<div id="whowe">
-			<h1>Who Whe Are</h1>
-			<p>HMI is a Non-Profit Organization that focuses on promoting Equal opportunities, access to education, safe healthcare, Leadership advancement and self-reliance for women and girls in Nigeria. Our strategic signature projects and programs are tailored to provide the women and girls with interventions, empowerment, opportunities, capacity building and trainings to build self-esteem to develop and transform their communities. Investing in women and girls is the heart of our work because we know that investing in them will generate a powerful ripple effect leading to a healthier, more prosperous and developed society.</p>
+			<h1>Who We Are</h1>
+			<p>HMI(Her Matter Initiative) is a Non-Profit Organization that focuses on promoting Equal opportunities, access to education, safe healthcare, Leadership advancement and self-reliance for women and girls in Nigeria. Our strategic signature projects and programs are tailored to provide the women and girls with interventions, empowerment, opportunities, capacity building and trainings to build self-esteem to develop and transform their communities. Investing in women and girls is the heart of our work because we know that investing in them will generate a powerful ripple effect leading to a healthier, more prosperous and developed society.</p>
 		</div>
 		<div id="picwhowe">
-			<!--<img class="picwhowe" src="Images/picwhowe.jpg">
--->		</div>
+		</div>
 	</div>
-
+<
 	<div class="about2">
 		<div id="picvision">
 			<!--<img src="Images/pic3.jpg"> -->	
@@ -130,6 +143,17 @@
 			</ul>
 		</div>
 	</div>
+
+	<div class="about5">
+		<div id="uniqueness">
+			<h1>Our Uniqueness</h1>
+			<p>We are grassroots force of change, we deliver supports directly to the vulnerables in hard-to-reach communities and rural areas.
+				We are deeply rooted in the grassroots, we are highly connected to the grassroots, we are the grassroots.</p>
+		</div>
+		<div id="picuniqueness">
+		</div>
+	</div>
+
 
 	<div class="activities">
 		<h1>Our Activities</h1>
@@ -194,7 +218,7 @@
 				<li><a href="#">Blog</a></li>
 			</div>
 			<div class="downlogo">
-				<img src="images/pnglogo2.png">
+				<img src="images/hmilogopng.png">
 			</div>
 			<div class="contact">
 				<h1>Get in touch</h1>
