--- a/projectprog.html
+++ b/projectprog.html
@@ -9,19 +9,19 @@
 </head>
 <body>
 	<header>
-		<img src="images/pnglogo2.png">
+		<a href="images/hmilogopng.png"><img src="images/hmilogopng.png"></a>
 		<h1>Welcome to HMI</h1>
 	</header> 
-		<nav id="hminav">
+	<nav id="hminav">
 			<ul>
 				<li><a href="index.html">About
 					<span class="arrow">&#x25BC;</span>
 				</a>
 					<ul class="submenu">
-						<li><a href="index.html/#whowe">Who We Are</a></li>
-						<li><a href="#vision">Vision</a></li>
-						<li><a href="#mission">Mission</a></li>
-						<li><a href="#core">Core Values</a></li>
+						<li><a href="index.html#whowe">Who We Are</a></li>
+						<li><a href="index.html#vision">Vision</a></li>
+						<li><a href="index.html#mission">Mission</a></li>
+						<li><a href="index.html#core">Core Values</a></li>
 					</ul>
 				</li>
 				<li><a href="#">What We do
@@ -30,9 +30,9 @@
 					<ul class="submenu">
 						<li><a href="girlseducation.html">Girls Education</a></li>
 						<li><a href="health.html">Health</a></li>
-						<li><a href="#">Economic Empowerment</a></li>
-						<li><a href="#">Leadership</a></li>
-						<li><a href="#">Democracy</a></li>
+						<li><a href="economic.html">Economic Empowerment</a></li>
+						<li><a href="fyn.html">Youth Development</a></li>
+						<li><a href="#">Democracy and Good Governance</a></li>
 						<li><a href="#">Peace</a></li>
 					</ul>
 				</li>
@@ -42,64 +42,137 @@
 				</a>
 					<ul class="submenu">
 						<li><a href="projectprog.html">PROG(Promotion of Girl Child Education</a></li>
-						<li><a href="#">CODE-ME</a></li>
-						<li><a href="#">HAP(Health Awareness Program)</a></li>
-						<li><a href="#">FLIP(Functional Literacy Program for Young Women)</a></li>
+						<li><a href="codeme.html">CODE-ME</a></li>
+						<li><a href="projecthap.html">HAP(Health Awareness Program)</a></li>
+						<li><a href="projectvow.html">VOW(Vocational Skills for Rural Women)</a></li>
+						<li><a href="#">Vote Make Nigeria Better</a></li>
+						<li><a href="projectflip.html">FLIP(Functional Literacy Program for Women)</a></li>
 					</ul>
 				</li>
-				<li><a href="hapimpacts.html">Impacts</a></li>
+				<li><a href="#">Impacts
+					<span class="arrow">&#x25BC;</span>
+				</a>
+				<ul class="submenu">
+					<li><a href="progimpact.html">PROG Impacts</a></li>
+					<li><a href="hapimpacts.html">HAP Impacts</a></li>
+					<li><a href="#">FLIP Impacts</a></li>
+					<li><a href="#">VOW Impacts</li>
+					<li><a href="#">Vote Make Nigeria Better</a></li>
+				</ul>
+				</li>
 				<li><a href="#">Take Action
 					<span class="arrow">&#x25BC;</span>
 				</a>
 					<ul class="submenu">
+						<li><a href="#">Donate</a></li>
 						<li><a href="#">Partner</a></li>
 						<li><a href="#">Sponsor</a></li>
 						<li><a href="#">Volunteer</a></li>
 					</ul>
 				</li>
-				<li><a href="donate.html">Donate</a></li>
+				<li><a href="#">Gallery</a></li>
 				<li><a href="#">News</a></li>
 				<li><a href="#">Blog</a></li>
 			</ul>
 		</nav>
-	<div class="projectprog">
-		<img src="images/project prog.jpg" alt="prog">
 
-    </div>
-	<footer>
-		<div class="footercontainer">
-			<div class="littleabout">
-				<h1>Her Matter Initiative (HMI)</h1>
-				<p>HMI is investing qualitative resources into ensuring that Nigerian women and
-				girls are empowered towards the actualization of the gender angle the UN
-				Sustainable Development Goals (SDGs).</p>
-			</div>
-			<div class="links">
-				<h1>Useful links</h1>
-				<li><a href="#">About us</a></li>
-				<li><a href="#">What we do</a></li>
-				<li><a href="#">Youth</a></li>
-				<li><a href="#">Projects</a></li>
-				<li><a href="#">Impacts</a></li>
-				<li><a href="#">Donate</a></li>
-				<li><a href="#">Take action</a></li>
-				<li><a href="#">News</a></li>
-				<li><a href="#">Blog</a></li>
-			</div>
-			<div class="downlogo">
-				<img src="images/pnglogo2.png">
-			</div>
-			<div class="contact">
-				<h1>Get in touch</h1>
-				<p>Adjacent Handmade Nursery/Primary Sch.,<br>
-				Gbaiko, Bosso, Minna, Niger State,<br>
-				Nigeria.</p><br><br>
-				<p>Tel: 07063856763, 07085181196.</p>
-				<p>Email: hermatterinitiative@gmail.com</p>
-
-			</div>
+	<div class="contentwrap">
+		<div class="hprog">
+			<img src="images/project.jpg">
+			<h1>PROJECT PROG<br>(Promotion of Girls' Education)</h1>
 		</div>
-		<div class="copy"><p>Copyrights &copy;2019 All rights reserved by Her Matter Initiative(HMI).</p></div>	
-	</footer>
-</body>
-</html>
+		<div class="picprog">
+		</div>
+			
+		<div class="projectprog">
+			<div class="one">
+				<h2>Brief Introduction</h2>
+				<p>Female literacy is very low in rural communities; they believe that educating girls is of no use. It is also believed that girls are born to serve the household, support mothers at home and be good wife. Besides, girls have no decision making power in the society as they are regarded as inferior to men. Girls are kept away from formal schooling and they are forced to marry in their teenage years. The parents are less aware about the benefits of educating girls. Therefore the main aim of the project is to improve female literacy in the rural villages by raising awareness about the importance of girl's education and supporting girls from poor families into education. This will motivate parents to educate their daughters ands hence improve the number of girls in schooling.</p><br><br>
+ 
+				<p>The problem of girls is the problem of the society as a whole. Their challenges should be counteracted to create better world for women.  An educated girl will be a mother in the future 
+				and there is ample evidence to suggest that an educated mother ensures that her children will get an education regardless of gender,
+				 brings up healthier babies, has better family planning and they also participate in income generating activities and community social
+				  activities.</p> 
+			</div>
+			<div class="two">
+				<!-- <img src="images/pic1prog.jpg"> -->
+			</div>
+			<div class="one">
+				<p>Hence, this is a more reliable and sustainable approach to poverty reduction and wellbeing of the poorest in rural 
+				communities. To this end HMI is in the vanguard of empowering girls through education.</p>
+				<h2>Project Description</h2>
+				<p>HMI project PROG is a long term continuous project that provides holistic support to poor girls in vulnerable communities. 
+				Targeted supports covers school fees, uniforms, school bags, writing materials (books, pencils, biro, etc), electronic
+				learning devices like computers, teaching resources, such as stationery, chalk and black boards. 
+				This encourages children to learn and boost their morale.</p>
+				<h2>Target Beneficiaries</h2>
+				<p>The project targets the most and disadvantaged girls who are mostly orphans and at the highest risk of dropping out of school. The project also involves working closely with girls after they leave school to help in the vulnerable period between childhood and adulthood.</p><br><br> 
+			</div>
+			<div class="four"></div>
+			<div class="one">
+				<p>Project PROG fully support the creation of student learning activities that shall provide academic enrichment opportunities during non-school hours for children, particularly students who attend high-poverty and low-performing schools. The project shall help students meet the recommended student standards in core academic subjects, such as science and arts subjects and language subjects; offer students a broad array of enrichment activities that can complement their regular academic program.</p><br><br> 
+				<p>However, financial constraints have become bottleneck for the realization of this objective.  
+				Funding is therefore needed to provide sustainable interventions and support for the project.
+				It is on this note that we are humbly calling upon various funding organizations, government institutions and philanthropic 
+				individuals to give a helping hand towards the realization and sustainability of this project.</p><br><br> 
+			</div>
+			<div class="six"></div>
+		</div>
+		<div class="baseprog">
+			<h2>Goal</h2>
+			<p>To improve the educational status of girls to meet the Sustainable Development Goals(SDGs).</p> 
+			<h2>Objectives</h2>
+			<p><b>*</b>Promotion of up-to-standard girl- child education especially those with inability to  afford  higher costly  education offered in the neighbouring schools.</p>
+			<p><strong>*</strong>To increase enrollment of students in the school.</p> 
+			<p><strong>*</strong>To initiate the community to advocate for poor girls to have access to education.</p> 
+			<p><strong>*</strong>To increase the access of poor girls to education. </p>
+			<p><strong>*</strong>To increase school retention rate especially for girls in rural areas.</p>
+			<p><strong>*</strong>To change the life condition of poor girls through education.</p>
+			<p><strong>*</strong>To Eliminate gender disparities in primary and secondary education with a focus on ensuring girls' full equal access to achievement in basic education.</p>    
+			<p><strong>*</strong>To promote and create public awareness of the importance of girls' education and empowerment at all levels. 
+			<h2>Implementation Strategy</h2>
+			<p>This begins with stakeholder consultation plan with the members of the community in other to review the current situation, particularly situation of girls schooling environment and education system. A baseline data of the village is collected on the situation. Cost of schooling and uniform per girl and motivation of parents, teachers and local community is identified at the beginning. There is a continuous monitoring of the process through visits to the family and school to collect attendance of girls in the scheme and their progress monthly. This is fed back to respective donors every three months. The information collected is be analyzed in other to establish a long-term sustainable monitoring policy.</p><br><br> 
+			<p>In parallel with the above strategy to manage the project in the future, donors will provide various organisational and personal capacity development resources to manage the project effectively and efficiently. </p><br><br> 
+
+			<p>Similarly, HMI has the responsibility to manage, monitor, report to it stakeholders and demonstrating that resources are being spent efficiently. Finally, at the end of pilot year, our donors will make a project visit to analyse the efficiency, impacts and motivation of the beneficiaries and local community. This would further assure our donors and partners of HMI effective project management and the need to sustain the project.</p>
+
+		</div>
+	</div>
+	<footer>
+			<div class="footercontainer">
+				<div class="littleabout">
+					<h1>Her Matter Initiative (HMI)</h1>
+					<p>HMI is investing qualitative resources into ensuring that Nigerian women and
+					girls are empowered towards the actualization of the gender angle the UN
+					Sustainable Development Goals (SDGs).</p>
+				</div>
+				<div class="links">
+					<h1>Useful links</h1>
+					<li><a href="#">About us</a></li>
+					<li><a href="#">What we do</a></li>
+					<li><a href="#">Youth</a></li>
+					<li><a href="#">Projects</a></li>
+					<li><a href="#">Impacts</a></li>
+					<li><a href="#">Donate</a></li>
+					<li><a href="#">Take action</a></li>
+					<li><a href="#">News</a></li>
+					<li><a href="#">Blog</a></li>
+				</div>
+				<div class="downlogo">
+					<img src="images/pnglogo2.png">
+				</div>
+				<div class="contact">
+					<h1>Get in touch</h1>
+					<p>Adjacent Handmade Nursery/Primary Sch.,<br>
+					Gbaiko, Bosso, Minna, Niger State,<br>
+					Nigeria.</p><br><br>
+					<p>Tel: 07063856763, 07085181196.</p>
+					<p>Email: hermatterinitiative@gmail.com</p>
+	
+				</div>
+			</div>
+			<div class="copy"><p>Copyrights &copy;2019 All rights reserved by Her Matter Initiative(HMI).</p></div>	
+		</footer>
+	</body>
+	</html>
+	
