--- a/fyn.html
+++ b/fyn.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Her Matter Initiative - HMI</title>
+	<title>Female Youth Network(FYN) - HMI</title>
 	<meta name="description" content="HMI is a Non-Profit Organization that focuses on promoting Equal opportunities, access to education and healthcare, Leadership advancement and self-reliance for women and girls in Nigeria.">
   	<meta name="keywords" content="Women and Girls NGO in Niger State, Youth Organization in Niger State, Girls education in Niger State, Women and girls empowerment in Niger State, Women and Girls NGO in Nigeria, Youth Organization in Nigeria, Girls education in Nigeria, Women and girls empowerment in Nigeria">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,19 +9,19 @@
 </head>
 <body>
 	<header>
-		<img src="images/pnglogo2.png">
+		<a href="images/hmilogopng.png"><img src="images/hmilogopng.png"></a>
 		<h1>Welcome to HMI</h1>
 	</header> 
-		<nav id="hminav">
+	<nav id="hminav">
 			<ul>
 				<li><a href="index.html">About
 					<span class="arrow">&#x25BC;</span>
 				</a>
 					<ul class="submenu">
-						<li><a href="#whowe">Who We Are</a></li>
-						<li><a href="#vision">Vision</a></li>
-						<li><a href="#mission">Mission</a></li>
-						<li><a href="#core">Core Values</a></li>
+						<li><a href="index.html#whowe">Who We Are</a></li>
+						<li><a href="index.html#vision">Vision</a></li>
+						<li><a href="index.html#mission">Mission</a></li>
+						<li><a href="index.html#core">Core Values</a></li>
 					</ul>
 				</li>
 				<li><a href="#">What We do
@@ -30,9 +30,9 @@
 					<ul class="submenu">
 						<li><a href="girlseducation.html">Girls Education</a></li>
 						<li><a href="health.html">Health</a></li>
-						<li><a href="#">Economic Empowerment</a></li>
-						<li><a href="#">Leadership</a></li>
-						<li><a href="#">Democracy</a></li>
+						<li><a href="economic.html">Economic Empowerment</a></li>
+						<li><a href="fyn.html">Youth Development</a></li>
+						<li><a href="#">Democracy and Good Governance</a></li>
 						<li><a href="#">Peace</a></li>
 					</ul>
 				</li>
@@ -44,24 +44,39 @@
 						<li><a href="projectprog.html">PROG(Promotion of Girl Child Education</a></li>
 						<li><a href="codeme.html">CODE-ME</a></li>
 						<li><a href="projecthap.html">HAP(Health Awareness Program)</a></li>
-						<li><a href="#">FLIP(Functional Literacy Program for Young Women)</a></li>
+						<li><a href="projectvow.html">VOW(Vocational Skills for Rural Women)</a></li>
+						<li><a href="#">Vote Make Nigeria Better</a></li>
+						<li><a href="projectflip.html">FLIP(Functional Literacy Program for Women)</a></li>
 					</ul>
 				</li>
-				<li><a href="hapimpacts.html">Impacts</a></li>
+				<li><a href="#">Impacts
+					<span class="arrow">&#x25BC;</span>
+				</a>
+				<ul class="submenu">
+					<li><a href="progimpact.html">PROG Impacts</a></li>
+					<li><a href="hapimpacts.html">HAP Impacts</a></li>
+					<li><a href="#">FLIP Impacts</a></li>
+					<li><a href="#">VOW Impacts</li>
+					<li><a href="#">Vote Make Nigeria Better</a></li>
+				</ul>
+				</li>
 				<li><a href="#">Take Action
 					<span class="arrow">&#x25BC;</span>
 				</a>
 					<ul class="submenu">
+						<li><a href="#">Donate</a></li>
 						<li><a href="#">Partner</a></li>
 						<li><a href="#">Sponsor</a></li>
 						<li><a href="#">Volunteer</a></li>
 					</ul>
 				</li>
-				<li><a href="donate.html">Donate</a></li>
+				<li><a href="#">Gallery</a></li>
 				<li><a href="#">News</a></li>
 				<li><a href="#">Blog</a></li>
 			</ul>
 		</nav>
+
+
 	<div class="grouppic">
 		<div class="hp">
 			<img src="images/fynlogopng.png">
@@ -105,7 +120,8 @@
 			<h1>Our<br>Uniqueness</h1>
 		</div>
 		<div class="plain2b">
-			<p>We deliver supports directly to the vulnerables<br> in hard-to-reach communities and rural areas.<br>We are deeply rooted in the grassroots,<br>we are highly connected to the grassroots,<br>we are grassroots force of change,<br>we are the grassroots.</p>
+			<p>We are grassroots force of change, we deliver supports directly<br>to the vulnerables in hard-to-reach communities and rural areas.<br>
+				We are deeply rooted in the grassroots,    we are highly connected<br> to the grassroots, we are the grassroots.</p>
 		</div>
 	</div>
 
