--- a/girlseducation.html
+++ b/girlseducation.html
@@ -9,59 +9,73 @@
 </head>
 <body>
 	<header>
-		<img src="images/pnglogo2.png">
+		<a href="images/hmilogopng.png"><img src="images/hmilogopng.png"></a>
 		<h1>Welcome to HMI</h1>
 	</header> 
 	<nav id="hminav">
-		<ul>
-			<li><a href="index.html">About
-				<span class="arrow">&#x25BC;</span>
-			</a>
+			<ul>
+				<li><a href="index.html">About
+					<span class="arrow">&#x25BC;</span>
+				</a>
+					<ul class="submenu">
+						<li><a href="index.html#whowe">Who We Are</a></li>
+						<li><a href="index.html#vision">Vision</a></li>
+						<li><a href="index.html#mission">Mission</a></li>
+						<li><a href="index.html#core">Core Values</a></li>
+					</ul>
+				</li>
+				<li><a href="#">What We do
+					<span class="arrow">&#x25BC;</span>
+				</a>
+					<ul class="submenu">
+						<li><a href="girlseducation.html">Girls Education</a></li>
+						<li><a href="health.html">Health</a></li>
+						<li><a href="economic.html">Economic Empowerment</a></li>
+						<li><a href="fyn.html">Youth Development</a></li>
+						<li><a href="#">Democracy and Good Governance</a></li>
+						<li><a href="#">Peace</a></li>
+					</ul>
+				</li>
+				<li><a href="fyn.html">Youth</a></li>
+				<li><a href="#">Projects
+					<span class="arrow">&#x25BC;</span>
+				</a>
+					<ul class="submenu">
+						<li><a href="projectprog.html">PROG(Promotion of Girl Child Education</a></li>
+						<li><a href="codeme.html">CODE-ME</a></li>
+						<li><a href="projecthap.html">HAP(Health Awareness Program)</a></li>
+						<li><a href="projectvow.html">VOW(Vocational Skills for Rural Women)</a></li>
+						<li><a href="#">Vote Make Nigeria Better</a></li>
+						<li><a href="projectflip.html">FLIP(Functional Literacy Program for Women)</a></li>
+					</ul>
+				</li>
+				<li><a href="#">Impacts
+					<span class="arrow">&#x25BC;</span>
+				</a>
 				<ul class="submenu">
-					<li><a href="index.html/#whowe">Who We Are</a></li>
-					<li><a href="#vision">Vision</a></li>
-					<li><a href="#mission">Mission</a></li>
-					<li><a href="#core">Core Values</a></li>
+					<li><a href="progimpact.html">PROG Impacts</a></li>
+					<li><a href="hapimpacts.html">HAP Impacts</a></li>
+					<li><a href="#">FLIP Impacts</a></li>
+					<li><a href="#">VOW Impacts</li>
+					<li><a href="#">Vote Make Nigeria Better</a></li>
 				</ul>
-			</li>
-			<li><a href="#">What We do
-				<span class="arrow">&#x25BC;</span>
-			</a>
-				<ul class="submenu">
-					<li><a href="girlseducation.html">Girls Education</a></li>
-					<li><a href="health.html">Health</a></li>
-					<li><a href="#">Economic Empowerment</a></li>
-					<li><a href="#">Leadership</a></li>
-					<li><a href="#">Democracy</a></li>
-					<li><a href="#">Peace</a></li>
-				</ul>
-			</li>
-			<li><a href="fyn.html">Youth</a></li>
-			<li><a href="#">Projects
-				<span class="arrow">&#x25BC;</span>
-			</a>
-				<ul class="submenu">
-					<li><a href="projectprog.html">PROG(Promotion of Girl Child Education</a></li>
-					<li><a href="#">CODE-ME</a></li>
-					<li><a href="#">HAP(Health Awareness Program)</a></li>
-					<li><a href="#">FLIP(Functional Literacy Program for Young Women)</a></li>
-				</ul>
-			</li>
-			<li><a href="hapimpacts.html">Impacts</a></li>
-			<li><a href="#">Take Action
-				<span class="arrow">&#x25BC;</span>
-			</a>
-				<ul class="submenu">
-					<li><a href="#">Partner</a></li>
-					<li><a href="#">Sponsor</a></li>
-					<li><a href="#">Volunteer</a></li>
-				</ul>
-			</li>
-			<li><a href="#">Donate</a></li>
-			<li><a href="#">News</a></li>
-			<li><a href="#">Blog</a></li>
-		</ul>
-	</nav>
+				</li>
+				<li><a href="#">Take Action
+					<span class="arrow">&#x25BC;</span>
+				</a>
+					<ul class="submenu">
+						<li><a href="#">Donate</a></li>
+						<li><a href="#">Partner</a></li>
+						<li><a href="#">Sponsor</a></li>
+						<li><a href="#">Volunteer</a></li>
+					</ul>
+				</li>
+				<li><a href="#">Gallery</a></li>
+				<li><a href="#">News</a></li>
+				<li><a href="#">Blog</a></li>
+			</ul>
+		</nav>
+
 	<div class="girleducation">
 		<div class="pic1ge">
 			<!-- <img src="images/pic1ge.jpg" alt="girl"> -->
