--- a/girlseducation.html
+++ b/girlseducation.html
@@ -227,7 +227,7 @@
 					Nigeria.</p>
 					<p>Tel: 07063856763, 07085181196.</p>
 					<p>Email: hermatterinitiative@gmail.com</p>
-					<div class="social"><a href="https://www.facebook.com/hermatterinitiative1/?modal=admin_todo_tour"><img  src="images/facebook.svg"></a><a href="#"><img src="images/twitter.svg"></a><a href="#"><img src="images/instagram.svg"></a><a href="https://hermatterinitiative@gmail.com"><img src="images/gmail.svg"></a>
+					<div class="social"><a href="https://www.facebook.com/hermatterinitiative1"><img  src="images/facebook.svg"></a><a href="#"><img src="images/twitter.svg"></a><a href="#"><img src="images/instagram.svg"></a><a href="mailto:hermatterinitiative@gmail.com"><img src="images/gmail.svg"></a>
 						<a href="#"><img src="images/youtube.svg"></a></div>
 				</div>
 
