hmi responsive website updated 1july19

--- a/makenigeriabetter.html
+++ b/makenigeriabetter.html
@@ -237,8 +237,7 @@
 				</div>
 				<div class="contact">
 					<h1>Get in touch</h1>
-					<p>Adjacent Handmade Nursery/Primary Sch.,Gbaiko, Bosso, Minna, Niger State,<br>
-					Nigeria.</p>
+                    <p>C1 Peniel Albarka Plaza, Opposite Federal High Court, Kpakungu, Minna, Niger State.</p>
 					<p>Tel: 07063856763, 07085181196.</p>
 					<p>Email: hermatterinitiative@gmail.com</p>
 					<div class="social"><a href="https://www.facebook.com/hermatterinitiative1"><img  src="images/facebook.svg"></a><a href="#"><img src="images/twitter.svg"></a><a href="#"><img src="images/instagram.svg"></a><a href="mailto:hermatterinitiative@gmail.com"><img src="images/gmail.svg"></a>
