--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+UA-144133292-1
 	<title>Her Matter Initiative - HMI</title>
-	<meta name="description" content="HMI is a Non-Profit Organization that focuses on promoting Equal opportunities, access to education and healthcare, Leadership advancement and self-reliance for women and girls in Nigeria.">
+	<meta name="description" content="HMI is a Non-Profit dedicated to promoting gender equality, access to education and healthcare, Leadership advancement and self-reliance for women and girls in Nigeria.">
   	<meta name="keywords" content="Women and Girls NGO in Niger State, Youth Organization in Niger State, Girls education in Niger State, Women and girls empowerment in Niger State, Women and Girls NGO in Nigeria, Youth Organization in Nigeria, Girls education in Nigeria, Women and girls empowerment in Nigeria">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
