--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ UA-144133292-1
 						<p>C1 Peniel Albarka Plaza, Opposite Federal High Court, Kpakungu, Minna, Niger State.</p>
 						<p>Tel: 07063856763, 07085181196.</p>
 						<p>Email: hermatterinitiative@gmail.com</p>
-						<div class="social"><a href="https://www.facebook.com/hermatterinitiative1"><img  src="images/facebook.svg"></a><a href="#"><img src="images/twitter.svg"></a><a href="#"><img src="images/instagram.svg"></a><a href="mailto:hermatterinitiative@gmail.com"><img src="images/gmail.svg"></a>
+						<div class="social"><a href="https://www.facebook.com/hermatterinitiative"><img  src="images/facebook.svg"></a><a href="#"><img src="images/twitter.svg"></a><a href="#"><img src="images/instagram.svg"></a><a href="mailto:hermatterinitiative@gmail.com"><img src="images/gmail.svg"></a>
 							<a href="#"><img src="images/youtube.svg"></a></div>
 					</div>
 	
